# pyryotype

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: CI.yml
cytobands/: cytoBand_no_alts_HG38.tsv  cytoband.unmapped  liftover_hg38_chm13.py
src/ideogram/: __init__.py  ideogram.py  plotting_utils.py
src/ideogram/static/: cytoband_HG38.bed  cytoband_chm13.bed
src/pyryotype/: __about__.py  __init__.py  coverage.py  ideogram.py  paf_plotting.py  paf_tools.py  plotting_utils.py
src/pyryotype/static/: cytobands_hg38.bed
tests/: test_coverage_plotting.py  test_ideogram_plotting.py  test_paf_plotting.py  test_paf_utils.py
tests/static/: test.paf  test_extraneous.paf
